--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login responsiva</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/midia-query.css">
 </head>
 <body>
